replace static state in Bot class with dependency injection