@@ -8,7 +8,8 @@ import net.dv8tion.jda.api.entities.TextChannel;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.events.message.MessageUpdateEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
-import net.javadiscord.javabot.Bot;
+import net.javadiscord.javabot.data.config.BotConfig;
+import net.javadiscord.javabot.data.h2db.DbHelper;
 import net.javadiscord.javabot.systems.moderation.warn.model.WarnSeverity;
 import net.javadiscord.javabot.systems.notification.NotificationService;
 import net.javadiscord.javabot.util.ExceptionLogger;
@@ -21,6 +22,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Scanner;
@@ -41,20 +43,26 @@ public class AutoMod extends ListenerAdapter {
 					+ "[\\p{Alnum}.,%_=?&#\\-+()\\[\\]*$~@!:/{};']*)",
 			Pattern.CASE_INSENSITIVE | Pattern.MULTILINE | Pattern.DOTALL);
 	private final NotificationService notificationService;
+	private final BotConfig botConfig;
 	private List<String> spamUrls;
+	private final DbHelper dbHelper;
 
 	/**
 	 * Constructor of the class, that creates a list of strings with potential spam/scam urls.
 	 * @param notificationService The {@link QOTWPointsService}
+	 * @param botConfig The main configuration of the bot
+	 * @param dbHelper An object managing databse operations
 	 */
-	public AutoMod(NotificationService notificationService) {
+	public AutoMod(NotificationService notificationService, BotConfig botConfig, DbHelper dbHelper) {
 		this.notificationService = notificationService;
+		this.botConfig = botConfig;
+		this.dbHelper = dbHelper;
 		try(Scanner scan = new Scanner(new URL("https://raw.githubusercontent.com/DevSpen/scam-links/master/src/links.txt").openStream()).useDelimiter("\\A")) {
 			String response = scan.next();
 			spamUrls = List.of(response.split("\n"));
 		} catch (IOException e) {
 			ExceptionLogger.capture(e, getClass().getSimpleName());
-			spamUrls = List.of();
+			spamUrls = Collections.emptyList();
 		}
 		log.info("Loaded {} spam URLs!", spamUrls.size());
 	}
@@ -93,7 +101,7 @@ public class AutoMod extends ListenerAdapter {
 	private void checkNewMessageAutomod(@Nonnull Message message) {
 		// mention spam
 		if (message.getMentions().getUsers().size() >= 5) {
-			new ModerationService(notificationService, Bot.getConfig().get(message.getGuild()))
+			new ModerationService(notificationService, botConfig.get(message.getGuild()), dbHelper)
 					.warn(
 							message.getAuthor(),
 							WarnSeverity.MEDIUM,
@@ -127,7 +135,7 @@ public class AutoMod extends ListenerAdapter {
 		//Check for Advertising Links
 		if (hasAdvertisingLink(message)) {
 			notificationService.withGuild(message.getGuild()).sendToModerationLog(c -> c.sendMessageFormat("Message: `%s`", message.getContentRaw()));
-			new ModerationService(notificationService, Bot.getConfig().get(message.getGuild()))
+			new ModerationService(notificationService, botConfig.get(message.getGuild()), dbHelper)
 					.warn(
 							message.getAuthor(),
 							WarnSeverity.MEDIUM,
@@ -145,7 +153,7 @@ public class AutoMod extends ListenerAdapter {
 		//Check for suspicious Links
 		if (hasSuspiciousLink(message)) {
 			notificationService.withGuild(message.getGuild()).sendToModerationLog(c -> c.sendMessageFormat("Suspicious Link sent by: %s (`%s`)", message.getAuthor().getAsMention(), message.getContentRaw()));
-			new ModerationService(notificationService, Bot.getConfig().get(message.getGuild()))
+			new ModerationService(notificationService, botConfig.get(message.getGuild()), dbHelper)
 					.warn(
 							message.getAuthor(),
 							WarnSeverity.MEDIUM,
@@ -170,7 +178,7 @@ public class AutoMod extends ListenerAdapter {
 		if (!msg.getAttachments().isEmpty() && msg.getAttachments().stream().allMatch(a -> Objects.equals(a.getFileExtension(), "java"))) {
 			return;
 		}
-		new ModerationService(notificationService, Bot.getConfig().get(member.getGuild()))
+		new ModerationService(notificationService, botConfig.get(member.getGuild()), dbHelper)
 				.timeout(
 						member,
 						"Automod: Spam",
@@ -231,12 +239,12 @@ public class AutoMod extends ListenerAdapter {
 		// Advertising
 		Matcher matcher = INVITE_URL.matcher(cleanString(message.getContentRaw()));
 		if (matcher.find()) {
-			return Bot.getConfig().get(message.getGuild()).getModerationConfig().getAutomodInviteExcludes().stream().noneMatch(message.getContentRaw()::contains);
+			return botConfig.get(message.getGuild()).getModerationConfig().getAutomodInviteExcludes().stream().noneMatch(message.getContentRaw()::contains);
 		}
 		return false;
 	}
 
 	private boolean isSuggestionsChannel(@NotNull TextChannel channel) {
-		return channel.equals(Bot.getConfig().get(channel.getGuild()).getModerationConfig().getSuggestionChannel());
+		return channel.equals(botConfig.get(channel.getGuild()).getModerationConfig().getSuggestionChannel());
 	}
 }
